# taskem-server-legacy

./: .dockerignore  .env-example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  build.rs  compose-example.yaml  diesel.toml  prometheus.yml
.github/workflows/: build-and-lint.yml  diff-metrics.yml
auth/: .env-example  Cargo.toml  Dockerfile  build.rs
auth/proto/: auth.proto
auth/src/: constants.rs  container.rs  main.rs
auth/src/api/: from.rs  mod.rs
auth/src/api/middlewares/: auth.rs
auth/src/api/services/: auth.rs
auth/src/core/: regex.rs
auth/src/domain/: mod.rs
auth/src/domain/models/user/: login_information.rs  mod.rs  user_information.rs
auth/src/domain/repositories/: error.rs  mod.rs  repository.rs  session.rs  user.rs
auth/src/infrastructure/models/: mod.rs  user_information.rs
auth/src/infrastructure/repositories/: map_from.rs  mod.rs  session_repository.rs  user_repository.rs
libs/db/: Cargo.toml
libs/db/src/: config.rs  get_pool.rs  lib.rs  migration.rs  schema.rs
migrations/2024-01-29-211248_user_information/: up.sql
migrations/2024-03-06-123335_team_information/: up.sql
migrations/2024-03-14-120629_task_information/: down.sql
migrations/2024-03-14-121244_task_assign/: down.sql
proto/: task.proto  team.proto
scripts/: generate-certs.sh  run_e2e_tests.sh
src/: app.rs  container.rs  lib.rs  main.rs
src/api/: from.rs  mod.rs  service_macros.rs
src/api/middlewares/: auth.rs
src/api/services/: auth.rs  file.rs  mod.rs  profile.rs  task.rs  team.rs
src/common/: app_error.rs  mod.rs
src/core/: regex.rs
src/domain/: constants.rs  error.rs  mod.rs
src/domain/models/: mod.rs
src/domain/repositories/: file.rs  mod.rs  repository.rs  role.rs  session.rs  task.rs  team.rs  user.rs
src/infrastructure/: mod.rs  schema.rs
src/infrastructure/databases/: postgresql.rs  redis.rs
src/infrastructure/models/: mod.rs  task_assign.rs  task_information.rs  task_status.rs  team_information.rs  team_members.rs  (+2 more)
team/: Cargo.toml
tests/: auth_tests.rs
tests/common/: mod.rs
tests/snapshots/: auth_tests__auth_tests__login.snap  auth_tests__auth_tests__sign_up.snap
(+31 files in other folders)
