[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.6.0-pre.0"
db = { path = "../libs/db" }
diesel = { version = "2.1.6", features = ["postgres", "r2d2"] }
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
prost = "0.12.4"
prost-types = "0.12.3"
tonic = { version = "0.11.0", features = ["tls", "default"] }
dotenv = "0.15.0"
axum = "0.7.5"
axum-server = "0.6.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-service = "0.3.2"
tower = "0.4.13"
hyper = "1.3.1"
derive-new = "0.6.0"
r2d2_redis = "0.14.0"
regex = "1.10.4"
uuid = { version = "1.8.0", features = ["v4", "v7"] }
chrono = "0.4.38"

[build-dependencies]
tonic-build = "0.11.0"